# sila_cetoni

./: .gitignore  .gitmodules  CHANGELOG.md  Feature.sila.xml  README.md  example_configuration.jsonc  install.cmd  install.sh  install_and_run_demo.cmd  install_and_run_demo.sh  local_ip.py  pyproject.toml  qmix_error.py  requirements.txt  run_demo.cmd  run_demo.sh  service_description.json  setup.cfg  setup.py  sila-cetoni.sh  sila_cetoni.py  sila_cetoni.sh  sila_qmix.py  sila_qmix.sh
application/: __init__.py  application.py  device.py  system.py
device_drivers/: README.md  balance.py
features/: Template.sila.xml
impl/common/: decorators.py  errors.py  neMESYS_errors.py  qmix_errors.py
new/: TODO.md
new/balance/balance_service/: __main__.py  server.py
new/battery/: MANIFEST.in  setup.py
new/battery/battery_provider/: __main__.py  server.py
new/core/core_service/: server.py
new/core/system_status_provider/: __main__.py  server.py
new/io/io_service/: __main__.py  server.py
new/motioncontrol/axis_service/: server.py
new/valves/: setup.py
new/valves/valve_service/: server.py
old/impl/common/: errors.py
old/serv/balance/: Balance_server.py  service_description.json
old/serv/battery/: Battery_server.py  service_description.json
old/serv/io/: QmixIO_client.py
old/serv/valves/: Valve_client.py  Valve_testclient.py
qmixio/: QmixIO_client.py  QmixIO_server.py  service_description.json
raspi/: README.md  monitor_wlan0.sh  zero2go.py
raspi/systemd/: monitor_wlan0.service  sila_cetoni@.service  sila_qmix@.service
scripts/: install.sh
serv/: local_ip.py
serv/balance/: Balance_client.py  Balance_server.py  Balance_testclient.py
serv/battery/: Battery_client.py  Battery_server.py  Battery_testclient.py
serv/io/: QmixIO_client.py  QmixIO_server.py  QmixIO_testclient.py
serv/valves/: Valve_client.py  Valve_server.py  Valve_testclient.py
sila_cetoni/: TODO.md  __main__.py  config.py  device_driver_abc.py
sila_cetoni/application/: __init__.py  application.py  config.py  device.py  singleton.py  system.py
sila_cetoni/balance/: MANIFEST.in  setup.py
sila_cetoni/balance/balance_service/: server.py
sila_cetoni/device_drivers/: README.md  balance.py  sartorius_balance.py
sila_cetoni/io/: MANIFEST.in  setup.py
sila_cetoni/util/: __init__.py  local_ip.py  utils.py
sila_cetoni/valves/: MANIFEST.in
systemd/: sila_qmix.service
templates/: service_description.json
valves/: Valve_client.py  Valve_server.py  service_description.json
(+244 files in other folders)
