[metadata]
name = sila_cetoni
version = 0.1.0
author = CETONI GmbH
author_email = info@cetoni.de
description = SiLA 2 implementations for CETONI devices
long_description_content_type = text/markdown
url = https://cetoni.de/cobomation/#sila
project_urls =
    Source = https://github.com/CETONI-Software/sila_qmix
    Bug Tracker = https://github.com/CETONI-Software/sila_qmix/issues
    SiLA Standard = https://sila-standard.org
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >=3.7
install_requires =
    black
    coloredlogs
    isort
    # most recent numpy has an issue with fmod on Windows 10 (2004); see https://tinyurl.com/y3dm3h86
    numpy==1.19.3
    pyOpenSSL
    pyserial
    shapely
    sila2
include_package_data = True

[options.package_data]
* =
    *.sila.xml

[options.packages.find]
where = .

[options.entry_points]
console-scripts =
    sila-cetoni = sila_cetoni:main
